# ColorThePixel-Game

./: .gitignore  .gitmodules  CMakeLists.txt  ColorThePixel.sln  LICENSE  TODO.md  project1.vcxproj  project1.vcxproj.filters  tasks.todo
assets/Shaders/: texture.fragment  texture.vert  texture.vertex
source/: Program.cpp  Program.h  main.cpp
source/Game/: Game.cpp  Game.h
source/Resources/: ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
src/: glad.c  main.cpp
src/ColorThePixel/: Game.cpp  Game.h  InputHandler.cpp  InputHandler.h
src/ColorThePixel/Render/: Renderer.cpp  Renderer.h  ResourceManager.h  Texture.cpp  Texture.h
